--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مدير السيرفرات السحابي</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مدير السيرفرات السحابي الآمن</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <style> body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; } </style>
     <script type="importmap">
     {
       "imports": {
@@ -17,125 +16,168 @@
       }
     }
     </script>
-  </head>
-  <body>
+    <style>body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; }</style>
+</head>
+<body>
     <div id="root"></div>
 
     <script type="text/babel" data-type="module">
-      import React, { useState, useEffect } from 'react';
-      import { createRoot } from 'react-dom/client';
-      import { Trash2, Edit, Calendar, Server, Save, Plus, RefreshCw, X } from 'lucide-react';
+        import React, { useState, useEffect } from 'react';
+        import { createRoot } from 'react-dom/client';
+        import { Trash2, Calendar, Server, Save, Plus, RefreshCw, X, Settings, ShieldCheck } from 'lucide-react';
 
-      // ==========================================
-      // تذكر: ضع بياناتك هنا ليعمل البرنامج
-      // ==========================================
-      const CONFIG = {
-        token: "ضـع_الـتـوكـن_هـنـا", // ضع التوكن الذي يبدأ بـ github_pat هنا
-        owner: "siradjmagik",        // اسم المستخدم الخاص بك
-        repo: "siradjmagik",         // اسم المستودع
-        path: "servers.json"         // اسم ملف البيانات
-      };
-
-      const App = () => {
-        const [servers, setServers] = useState([]);
-        const [loading, setLoading] = useState(false);
-        const [isFormOpen, setIsFormOpen] = useState(false);
-        const [sha, setSha] = useState('');
-
-        // دالة لجلب البيانات من GitHub
-        const loadData = async () => {
-          if (CONFIG.token.includes("ضـع")) {
-            alert("من فضلك ضع التوكن الخاص بك داخل الكود أولاً!");
-            return;
-          }
-          setLoading(true);
-          try {
-            const res = await fetch(`https://api.github.com/repos/${CONFIG.owner}/${CONFIG.repo}/contents/${CONFIG.path}`, {
-              headers: { Authorization: `token ${CONFIG.token}`, 'Cache-Control': 'no-cache' }
+        const App = () => {
+            const [servers, setServers] = useState([]);
+            const [loading, setLoading] = useState(false);
+            const [isFormOpen, setIsFormOpen] = useState(false);
+            const [isConfigOpen, setIsConfigOpen] = useState(false);
+            const [sha, setSha] = useState('');
+            
+            // جلب الإعدادات من ذاكرة المتصفح
+            const [config, setConfig] = useState(() => {
+                const saved = localStorage.getItem('gh_config');
+                return saved ? JSON.parse(saved) : { token: '', owner: 'magik03', repo: 'siradjmagik', path: 'servers.json' };
             });
-            const data = await res.json();
-            const content = JSON.parse(decodeURIComponent(escape(atob(data.content))));
-            setServers(content);
-            setSha(data.sha);
-          } catch (err) {
-            console.error("خطأ في الجلب:", err);
-          } finally { setLoading(false); }
-        };
 
-        useEffect(() => { loadData(); }, []);
+            useEffect(() => {
+                if (config.token) loadData();
+                else setIsConfigOpen(true);
+            }, []);
 
-        // دالة لحفظ البيانات في GitHub
-        const saveData = async (newList) => {
-          setLoading(true);
-          try {
-            const content = btoa(unescape(encodeURIComponent(JSON.stringify(newList, null, 2))));
-            const res = await fetch(`https://api.github.com/repos/${CONFIG.owner}/${CONFIG.repo}/contents/${CONFIG.path}`, {
-              method: 'PUT',
-              headers: { Authorization: `token ${CONFIG.token}` },
-              body: JSON.stringify({ message: "تحديث", content, sha })
-            });
-            if (res.ok) {
-              const resData = await res.json();
-              setSha(resData.content.sha);
-              setServers(newList);
-            }
-          } catch (err) { alert("فشل الحفظ!"); }
-          finally { setLoading(false); }
-        };
+            const loadData = async () => {
+                if (!config.token) return;
+                setLoading(true);
+                try {
+                    const res = await fetch(`https://api.github.com/repos/${config.owner}/${config.repo}/contents/${config.path}`, {
+                        headers: { Authorization: `token ${config.token}`, 'Cache-Control': 'no-cache' }
+                    });
+                    const data = await res.json();
+                    if (data.content) {
+                        const content = JSON.parse(decodeURIComponent(escape(atob(data.content))));
+                        setServers(content);
+                        setSha(data.sha);
+                    }
+                } catch (err) { alert("تأكد من صحة التوكن والإعدادات"); }
+                finally { setLoading(false); }
+            };
 
-        const handleAdd = (e) => {
-          e.preventDefault();
-          const fd = new FormData(e.target);
-          const newServer = {
-            id: Date.now(),
-            name: fd.get('name'),
-            endDate: new Date(Date.now() + fd.get('dur') * 30 * 24 * 60 * 60 * 1000).toISOString()
-          };
-          saveData([newServer, ...servers]);
-          setIsFormOpen(false);
-        };
+            const saveData = async (newList) => {
+                setLoading(true);
+                try {
+                    const content = btoa(unescape(encodeURIComponent(JSON.stringify(newList, null, 2))));
+                    const res = await fetch(`https://api.github.com/repos/${config.owner}/${config.repo}/contents/${config.path}`, {
+                        method: 'PUT',
+                        headers: { Authorization: `token ${config.token}`, 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ message: "Update via App", content, sha })
+                    });
+                    if (res.ok) {
+                        const resData = await res.json();
+                        setSha(resData.content.sha);
+                        setServers(newList);
+                    }
+                } catch (err) { alert("فشل في الحفظ!"); }
+                finally { setLoading(false); }
+            };
 
-        return (
-          <div className="min-h-screen">
-            <nav className="bg-blue-600 p-4 text-white flex justify-between items-center shadow-lg">
-              <h1 className="font-bold text-xl flex items-center gap-2"><Server /> مدير السيرفرات السحابي</h1>
-              <div className="flex gap-2">
-                <button onClick={loadData} className="p-2 bg-blue-500 rounded-lg"><RefreshCw size={20} className={loading ? "animate-spin" : ""}/></button>
-                <button onClick={() => setIsFormOpen(true)} className="bg-white text-blue-600 px-4 py-2 rounded-lg font-bold">+ إضافة</button>
-              </div>
-            </nav>
+            const handleSaveConfig = (e) => {
+                e.preventDefault();
+                const fd = new FormData(e.target);
+                const newConfig = {
+                    token: fd.get('token'),
+                    owner: fd.get('owner'),
+                    repo: fd.get('repo'),
+                    path: 'servers.json'
+                };
+                localStorage.setItem('gh_config', JSON.stringify(newConfig));
+                setConfig(newConfig);
+                setIsConfigOpen(false);
+                window.location.reload(); // إعادة تحميل لتنشيط الإعدادات
+            };
 
-            <div className="p-6 grid grid-cols-1 md:grid-cols-3 gap-4">
-              {servers.map(s => (
-                <div key={s.id} className="bg-white p-4 rounded-xl shadow-sm border border-gray-100">
-                  <h3 className="font-bold text-lg text-blue-600 mb-2">{s.name}</h3>
-                  <div className="text-sm text-gray-600 flex items-center gap-2">
-                    <Calendar size={14}/> ينتهي في: {new Date(s.endDate).toLocaleDateString('ar-EG')}
-                  </div>
-                  <button onClick={() => saveData(servers.filter(x => x.id !== s.id))} className="mt-4 text-red-400 hover:text-red-600"><Trash2 size={18}/></button>
+            return (
+                <div className="min-h-screen">
+                    <nav className="bg-slate-800 p-4 text-white flex justify-between items-center shadow-xl">
+                        <div className="flex items-center gap-2">
+                            <ShieldCheck className="text-green-400" />
+                            <h1 className="font-bold">مدير السيرفرات (نسخة آمنة)</h1>
+                        </div>
+                        <div className="flex gap-2">
+                            <button onClick={() => setIsConfigOpen(true)} className="p-2 bg-slate-700 rounded-lg"><Settings size={20}/></button>
+                            <button onClick={loadData} className="p-2 bg-slate-700 rounded-lg"><RefreshCw size={20} className={loading ? "animate-spin" : ""}/></button>
+                            <button onClick={() => setIsFormOpen(true)} className="bg-blue-600 px-4 py-2 rounded-lg font-bold">إضافة +</button>
+                        </div>
+                    </nav>
+
+                    <main className="p-6 max-w-5xl mx-auto">
+                        {!config.token && (
+                            <div className="bg-yellow-50 border-r-4 border-yellow-400 p-4 mb-6 text-yellow-800">
+                                يرجى الضغط على أيقونة الإعدادات ⚙️ وإدخال التوكن الخاص بك للبدء.
+                            </div>
+                        )}
+                        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                            {servers.map(s => (
+                                <div key={s.id} className="bg-white p-5 rounded-xl shadow-sm border border-gray-100 flex justify-between items-start">
+                                    <div>
+                                        <h3 className="font-bold text-lg">{s.name}</h3>
+                                        <p className="text-gray-500 text-sm italic">{new Date(s.endDate).toLocaleDateString('ar-EG')}</p>
+                                    </div>
+                                    <button onClick={() => saveData(servers.filter(x => x.id !== s.id))} className="text-red-300 hover:text-red-500"><Trash2 size={18}/></button>
+                                </div>
+                            ))}
+                        </div>
+                    </main>
+
+                    {/* نافذة الإعدادات */}
+                    {isConfigOpen && (
+                        <div className="fixed inset-0 bg-black/70 backdrop-blur-md flex items-center justify-center p-4 z-50">
+                            <form onSubmit={handleSaveConfig} className="bg-white p-6 rounded-2xl w-full max-w-md space-y-4 shadow-2xl">
+                                <h2 className="font-bold text-xl flex items-center gap-2 text-slate-800"><Settings /> إعدادات الربط السحابي</h2>
+                                <p className="text-sm text-gray-500">بياناتك تُحفظ في متصفحك فقط ولا تظهر على GitHub.</p>
+                                
+                                <div>
+                                    <label className="block text-xs font-bold mb-1">GitHub Personal Token</label>
+                                    <input name="token" type="password" defaultValue={config.token} placeholder="ghp_..." className="w-full border-2 p-3 rounded-xl outline-none focus:border-blue-500" required />
+                                </div>
+                                <div>
+                                    <label className="block text-xs font-bold mb-1">Username (اسم المستخدم)</label>
+                                    <input name="owner" defaultValue={config.owner} className="w-full border-2 p-3 rounded-xl outline-none focus:border-blue-500" required />
+                                </div>
+                                <div>
+                                    <label className="block text-xs font-bold mb-1">Repository (المستودع)</label>
+                                    <input name="repo" defaultValue={config.repo} className="w-full border-2 p-3 rounded-xl outline-none focus:border-blue-500" required />
+                                </div>
+                                <button type="submit" className="w-full bg-slate-800 text-white py-3 rounded-xl font-bold">حفظ وإتصال</button>
+                                <button type="button" onClick={() => setIsConfigOpen(false)} className="w-full text-gray-400">إلغاء</button>
+                            </form>
+                        </div>
+                    )}
+
+                    {/* نافذة إضافة سيرفر */}
+                    {isFormOpen && (
+                        <div className="fixed inset-0 bg-black/70 flex items-center justify-center p-4 z-50">
+                            <form onSubmit={(e) => {
+                                e.preventDefault();
+                                const fd = new FormData(e.target);
+                                const newServer = { id: Date.now(), name: fd.get('name'), endDate: new Date(Date.now() + fd.get('dur') * 30 * 24 * 60 * 60 * 1000).toISOString() };
+                                saveData([newServer, ...servers]);
+                                setIsFormOpen(false);
+                            }} className="bg-white p-6 rounded-2xl w-full max-w-sm space-y-4">
+                                <h2 className="font-bold text-lg">إضافة سيرفر جديد</h2>
+                                <input name="name" placeholder="اسم السيرفر" className="w-full border-2 p-3 rounded-xl outline-none focus:border-blue-500" required />
+                                <select name="dur" className="w-full border-2 p-3 rounded-xl outline-none focus:border-blue-500">
+                                    <option value="1">شهر واحد</option>
+                                    <option value="12">سنة كاملة</option>
+                                </select>
+                                <button type="submit" className="w-full bg-blue-600 text-white py-3 rounded-xl font-bold shadow-lg">حفظ سحابي</button>
+                                <button type="button" onClick={() => setIsFormOpen(false)} className="w-full text-gray-400">إلغاء</button>
+                            </form>
+                        </div>
+                    )}
                 </div>
-              ))}
-            </div>
+            );
+        };
 
-            {isFormOpen && (
-              <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4">
-                <form onSubmit={handleAdd} className="bg-white p-6 rounded-2xl w-full max-w-sm space-y-4">
-                  <h2 className="font-bold text-lg">إضافة سيرفر جديد</h2>
-                  <input name="name" placeholder="اسم السيرفر" className="w-full border p-2 rounded-lg" required />
-                  <select name="dur" className="w-full border p-2 rounded-lg">
-                    <option value="1">شهر واحد</option>
-                    <option value="12">سنة كاملة</option>
-                  </select>
-                  <button type="submit" className="w-full bg-blue-600 text-white py-2 rounded-lg font-bold">حفظ في GitHub</button>
-                  <button type="button" onClick={() => setIsFormOpen(false)} className="w-full text-gray-400">إلغاء</button>
-                </form>
-              </div>
-            )}
-          </div>
-        );
-      };
-
-      createRoot(document.getElementById('root')).render(<App />);
+        createRoot(document.getElementById('root')).render(<App />);
     </script>
-  </body>
+</body>
 </html>
